# studyflow

./: README.md  package-lock.json
client/app/: README.md  package-lock.json  package.json  vite.config.js
client/app/src/: App.jsx
client/app/src/components/: ConfirmModal.jsx  CourseModal.jsx  NotFound.jsx  ProtectedRoute.jsx  Sidebar.jsx  TaskModal.jsx  TaskTable.jsx
client/app/src/context/: AuthContext.jsx
client/app/src/data/: mockData.js
client/app/src/layout/: AppLayout.jsx
client/app/src/pages/: CoursePage.jsx  Dashboard.jsx  Login.jsx  Register.jsx
client/app/src/services/: apiClient.js  authService.js  courseService.js  courseService.test.js  taskService.js
client/app/src/utils/: dateHelpers.js  dateHelpers.test.js
server/django_uv/: pyproject.toml
server/django_uv/backend/: settings.py  urls.py
server/django_uv/django_project/: settings.py
server/django_uv/studyflow/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
server/django_uv/studyflow/migrations/: 0001_initial.py  0002_alter_user_managers_user_last_login.py  0003_user_is_active_user_is_staff.py  0004_alter_user_managers_user_groups_user_is_superuser_and_more.py  0005_remove_user_birth_date.py  0006_user_birth_date_alter_user_password.py
